--- a/exercise/templates/exercise/_points_badge.html
+++ b/exercise/templates/exercise/_points_badge.html
@@ -54,19 +54,22 @@
   {% elif show_zero_points_immediately and best_submission_true_points == 0 %}text-bg-danger
   {% endif %}"
   data-bs-toggle="tooltip" data-bs-placement="bottom"
-  title="{% if not feedback_revealed %}{{ feedback_hidden_description }}
-       {% elif not official %}
-         {% if unofficial_submission_type == 'limit_exceeded' %}{% translate 'LIMIT_EXCEEDED' %}
-         {% elif unofficial_submission_type == 'deadline_passed' %}{% translate 'DEADLINE_PASSED' %}
-         {% else %}{% translate 'UNOFFICIAL_DESCRIPTION' %}
-         {% endif %}
-       {% elif passed %}
-         {% if required > 0 %}{% translate 'PASSED' %}
-         {% endif %}
-       {% elif missing_points %}
-         {% blocktranslate trimmed with points=required %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}
-       {% elif submitted %}{% translate 'REQUIRED_EXERCISES_NOT_PASSED' %}
-       {% endif %}">
+  title="{% spaceless %}
+        {% if not feedback_revealed %}
+          {{ feedback_hidden_description }}
+        {% elif not official %}
+          {% if unofficial_submission_type == 'limit_exceeded' %}{% translate 'LIMIT_EXCEEDED' %}
+          {% elif unofficial_submission_type == 'deadline_passed' %}{% translate 'DEADLINE_PASSED' %}
+          {% else %}{% translate 'UNOFFICIAL_DESCRIPTION' %}
+          {% endif %}
+        {% elif passed %}
+          {% if required > 0 %}{% translate 'PASSED' %}
+          {% endif %}
+        {% elif missing_points %}
+          {% blocktranslate trimmed with points=required %}POINTS_REQUIRED_TO_PASS -- {{ points }}{% endblocktranslate %}
+        {% elif submitted %}{% translate 'REQUIRED_EXERCISES_NOT_PASSED' %}
+        {% endif %}
+      {% endspaceless %}">
   {% if show_zero_points_immediately and best_submission_true_points == 0 %}
     0 / {{ max }}
   {% else %}
