--- a/assets/sass/components/_frontpage-cards.scss
+++ b/assets/sass/components/_frontpage-cards.scss
@@ -11,14 +11,14 @@
 			padding-left: 10px;
 			padding-right: 10px;
 			width: 100%;
-			> .action {
+			.action {
 				display: flex;
 				flex-direction: row;
 				justify-content: center;
 				align-items: center;
 				font-size: 18px;
-				margin-top: 20px;
-				margin-bottom: 10px;
+				margin-top: 24px;
+				margin-bottom: 8px;
 
 				a {
 					@include focus-with-background-and-color;
