--- a/course/templates/course/archive.html
+++ b/course/templates/course/archive.html
@@ -7,8 +7,9 @@
 
 {% block content %}
   <div class="frontpage-panel">
-    <div class="page-header">
-        <h1>{% translate "COURSE_ARCHIVE" %}
+    <div class="page-header d-flex justify-content-between align-items-center flex-column flex-md-row">
+      <h1 class="align-self-start">{% translate "COURSE_ARCHIVE" %}</h1>
+      <div class="align-self-stretch mt-md-4">{% include "course/_search_courses_form.html" %}</div>
     </div>
     {% regroup instances by starting_time|date:"Y" as instances_by_year %}
 
@@ -20,7 +21,15 @@
         <div class="cards">
           {% include "course/_course_cards.html" with instances=year_instances condensed=True %}
         </div>
-      </section> 
+      </section>
     {% endfor %}
+
+    {% if not instances and not siteadvert %}
+			<div class="panel-body">
+				<p class="panel-default-text">
+					{% translate "NO_COURSES_FOUND" %}
+				</p>
+			</div>
+		{% endif %}
   </div>
 {% endblock %}
