Fix some bs5 issues

--- a/exercise/templates/exercise/_exercise_info.html
+++ b/exercise/templates/exercise/_exercise_info.html
@@ -28,7 +28,7 @@
 </div>
 
 <div class="card mb-3">
-	<div class="card-header bg-primary">
+	<div class="card-header text-bg-primary">
 		<h4 class="panel-title">{% translate "EXERCISE_INFO" %}</h4>
 	</div>
 	<div class="card-body">
