--- a/templates/base.html
+++ b/templates/base.html
@@ -117,7 +117,7 @@
 		<header>
 			<nav class="navbar-header topbar navbar fixed-top" aria-label="{% translate 'MAIN' %}">
 				<div class="container-fluid">
-					<div style="display: flex; align-items: center">
+					<div class="d-flex align-items-center">
 						<a class="navbar-brand btn btn-link py-2 d-flex align-items-center" href="{% url 'home' %}">{% brand_name %}</a>
 						<span class="navbar-brand d-none d-md-flex" style="font-size: 0.85em">{{ APLUS_VERSION }}</span>
 						<ul class="navbar-nav navbar-dropdown me-auto">
@@ -137,10 +137,10 @@
 							</li>
 						</ul>
 					</div>
-					<div class="d-flex">
+					<div class="d-flex gap-3">
 						<ul class="navbar-nav navbar-dropdown user-menu" style="flex-direction: row; align-items: baseline">
 							<li class="nav-item dropdown">
-								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false" 
+								<a href="#" class="btn btn-link py-2 px-2 px-lg-2 dropdown-toggle d-flex align-items-center" id="bd-theme" type="button" aria-expanded="false"
 									data-bs-toggle="dropdown" data-bs-display="static" aria-label="Theme">
 									<i id="theme-switcher-icon" class="bi bi-moon-stars-fill theme-icon-active"><use href="#moon-stars-fill"></use></i>
 									<span class="d-none d-lg-block ms-1" id="bd-theme-text">Theme</span>
@@ -215,12 +215,12 @@
 							</li>
 							{% endif %}
 						</ul>
+						<button type="button" class="navbar-toggler collapsed d-block d-md-none text-bg-primary" data-bs-toggle="offcanvas"
+							data-bs-target="#bs-navbar-collapse" aria-expanded="false">
+							<span class="visually-hidden">{% translate "TOGGLE_NAVIGATION" %}</span>
+							<i class="bi-list" aria-hidden="true"></i>
+						</button>
 					</div>
-					<button type="button" class="navbar-toggler collapsed d-block d-md-none text-bg-primary" data-bs-toggle="offcanvas"
-						data-bs-target="#bs-navbar-collapse" aria-expanded="false">
-						<span class="visually-hidden">{% translate "TOGGLE_NAVIGATION" %}</span>
-						<i class="bi-list" aria-hidden="true"></i>
-					</button>
 				</div>
 			</nav>
 		</header>
@@ -237,7 +237,7 @@
 			{% endblock %}
 			{% block container_closing_tag %}
 		</main>
-		{% endblock %}		
+		{% endblock %}
 		{% block footer %}
 		<footer class="site-footer footer mt-auto" role="contentinfo">
 			<nav class="navbar navbar-expand sticky-bottom bg-body-tertiary" role="presentation">
