--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -27,9 +27,10 @@
 	background-color: var(--bs-secondary-bg, #f9f2f4);
 }
 
-#bs-navbar-collapse.minimised 
+#bs-navbar-collapse.minimised
 {
 	width: 44px;
+	overflow-x: hidden;
 	.course-menu-label {
 		display: none;
 	}
@@ -48,7 +49,7 @@
 	}
 }
 @media (max-width: 768px) {
-	#bs-navbar-collapse.minimised 
+	#bs-navbar-collapse.minimised
 	{
 		width: auto;
 		.course-menu-label {
@@ -67,7 +68,7 @@
 		.course-sidebar-expander {
 			margin-left: inherit;
 		}
-	
+
 	}
 }
 #bs-navbar-collapse.show {
