--- a/userprofile/templates/userprofile/accessibility.html
+++ b/userprofile/templates/userprofile/accessibility.html
@@ -11,7 +11,10 @@
 
 <div class="row">
 	<div class="col-md-8">
-		{{ accessibility_statement|safe }}
+		<div class="card">
+			<div class="card-body bg-secondary-subtle">
+				{{ accessibility_statement|safe }}
+			</div>
 	</div>
 </div>
 {% endblock %}
