--- a/userprofile/templates/userprofile/privacy.html
+++ b/userprofile/templates/userprofile/privacy.html
@@ -11,8 +11,10 @@
 
 <div class="row">
     <div class="col-md-8">
-        <div class="card well-lg">
-            {{ privacy_text|safe }}
+        <div class="card">
+            <div class="card-body bg-secondary-subtle">
+                {{ privacy_text|safe }}
+            </div>
         </div>
     </div>
 </div>
