Fixes for tabulator navigation. Let language menu and skip course navigation link expand beyond minimised sidebar. Only show hamburger menu when course selected.

--- a/assets/sass/components/_sidebar.scss
+++ b/assets/sass/components/_sidebar.scss
@@ -30,7 +30,8 @@
 #bs-navbar-collapse.minimised
 {
 	width: 44px;
-	overflow-x: hidden;
+	overflow: visible;
+	pointer-events: auto;
 	.course-menu-label {
 		display: none;
 	}
